# T27FundraisingWebApp

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Trunk.toml  amplify.yml  build_modules.sh  gatsby-browser.js  gatsby-config.js  gatsby-node.js  graphql-types.ts  index.html  index.scss  ordercreate.html  orderlist.html  package-lock.json  package.json  ride.html  signin.html  tsconfig.json
.github/: dependabot.yml
.github/workflows/: deploy_web_app.yml  rust-clippy.yml
admin_pages/: Cargo.toml
admin_pages/src/: lib.rs  module.rs
admin_pages/src/components/: admin_config_deliveries.rs  admin_config_neighborhoods.rs  admin_config_product_costs.rs  admin_config_users.rs  mod.rs
admin_pages/src/pages/: closeout_fundraiser.rs  fr_config.rs  mod.rs
data_model/: Cargo.toml
data_model/src/: currency_utils.rs  data_model.rs  data_model_orders.rs  data_model_reports.rs  data_model_summary.rs  gql_utils.rs  lib.rs  module_init.rs
js/: Cargo.toml  cognito-auth.js  config.js  create-order.js  esri-map.js  list-orders.js
js/src/: auth_utils.rs  bootstrap.rs  datatable.rs  geolocate.rs  google_charts.rs  leaflet.rs  lib.rs  module_loader.rs  nav.rs
js/src/js/: auth.js  bootstrap_helpers.js  datatable.js  google_charts.js  leaflet.js  module_loader.js  nav.js
order_pages/: Cargo.toml
order_pages/src/: lib.rs  module.rs  order_submit.rs  order_utils.rs
order_pages/src/components/: add_new_order_button.rs  delivery_selector.rs  mod.rs
order_pages/src/pages/: mod.rs  order_donations.rs  order_form.rs  order_products.rs
report_pages/: Cargo.toml
report_pages/src/: lib.rs  module.rs  report_data.rs
report_pages/src/components/: action_report_buttons.rs  delete_report_order_dlg.rs  mod.rs  report_assisted_spreading_jobs.rs  report_deliveries.rs  report_distribution_points.rs  report_full.rs  report_loading_spinny.rs  report_money_collection.rs  report_quick.rs  report_sell_map.rs  report_spreaders_dlg.rs  report_spreading_jobs.rs  report_spreading_jobs_unfinished.rs  report_verify.rs
report_pages/src/pages/: mod.rs  reports.rs
src/: auth_utils.rs  bootstrap.rs  config.ts  currency_utils.rs  data_model.rs  data_model_orders.rs  data_model_reports.rs  datatable.rs  geolocate.rs  google_charts.rs  gql_utils.rs  html.js  leaflet.rs  main.rs  order_utils.rs
src/components/: action_report_buttons.rs  add_new_order_button.rs  add_new_order_widget.tsx  admin_config_deliveries.rs  admin_config_neighborhoods.rs  admin_config_product_costs.rs  admin_config_users.rs  currency_widget.tsx  delete_report_order_dlg.rs  issue_report_dlg.rs  mod.rs  navbar.rs  navbar.tsx  navbar_ctx.tsx  order_item.jsx  report_deliveries.rs  report_distribution_points.rs  report_full.rs  report_quick.rs  report_sell_map.rs  report_spreaders_dlg.rs  report_spreading_jobs.rs  report_spreading_jobs_unfinished.rs  report_verify.rs  report_view.tsx
src/data_model/: data_model.rs  data_model_orders.rs  data_model_reports.rs  gql_utils.rs  mod.rs
src/js/: auth.js  auth.ts  auth_utils.rs  datatable.js  fundraiser_config.ts  geolocate.js  google_charts.js  google_charts.rs  leaflet.js  mod.rs  ordersdb.ts  utils.ts
src/layouts/: primary_layout.tsx
src/pages/: 404.tsx  RawFundsReleaseData.json  add_donations.tsx  add_mulch.tsx  add_products_order.tsx  closeout_fundraiser.rs  delivery_time_sheet.tsx  fr_config.rs  funds_release.tsx  home.rs  index.tsx  mod.rs  order_donations.rs  order_form.rs  order_products.rs  order_step_1.tsx  orders.tsx  reports.rs  reports.tsx  signon.tsx  timecards.rs
src/static/: manifest.webmanifest  sw.js
src/style/: core.scss  index.scss
timecard_pages/: Cargo.toml
timecard_pages/src/: lib.rs  module.rs
timecard_pages/src/pages/: mod.rs  timecards.rs
webapp/: Cargo.toml  index.html  index.scss
webapp/src/: main.rs
webapp/src/components/: add_new_order_button.rs  issue_report_dlg.rs  mod.rs  module_host.rs  navbar.rs  report_deliveries.rs  report_money_collection.rs
webapp/src/data_model/: data_model.rs  data_model_orders.rs  mod.rs
webapp/src/js/: auth.js  bootstrap.rs
webapp/src/pages/: fr_config.rs  home.rs  mod.rs  order_form.rs
