[workspace]
members = [
    "js",
    "data_model",
    "timecard_pages",
    "order_pages",
    "report_pages",
    "admin_pages",
    "webapp",
]
resolver = "2"

[workspace.package]
repository = "https://github.com/cch71/T27FundraisingWebApp"
authors = ["Craig Hamilton <cch71a@gmail.com"]
license = "BSD-0"
edition = "2024"

[workspace.dependencies]
tracing = "0.1.43"
yew = { version = "0", features = ["csr"] }
yew-router = "0"
gloo = { version = "0", features = ["futures"] }
wasm-bindgen = "0"
wasm-bindgen-futures = "0"
serde-wasm-bindgen = "0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
anyhow = "1"
csv = "1"
calamine = "0.32"

chrono = { version = "0" }
rusty-money = { version = "0" }
rust_decimal = "1"
regex = "1"
uuid = { version = "1" }
js-sys = "0"
wasm-logger = "0"

[workspace.dependencies.web-sys]
version = "0"
features = [
    "Window",
    "Document",
    "Url",
    "Element",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlSelectElement",
    "HtmlButtonElement",
    "HtmlTextAreaElement",
    "HtmlAnchorElement",
    "Event",
    "FocusEvent",
    "Node",
    "NodeList",
    "DomStringMap",
    "DomTokenList",
    "CssStyleDeclaration",
    "Navigator",
    "Geolocation",
    "PositionOptions"
]
#web-sys = { version = "0" }

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
