[workspace]
members = [
    "js",
    "data_model",
    "timecard_pages",
    "order_pages",
    "report_pages",
    "admin_pages",
    "webapp",
]
resolver = "2"

[workspace.package]
repository = "https://github.com/cch71/T27FundraisingWebApp"
authors = ["Craig Hamilton <chamilton@craigscreations.com"]
license = "BSD-0"
edition = "2024"

[workspace.dependencies]
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-web = "0.1.3"
yew = { version = "0.23.0", features = ["csr"] }
yew-router = "0.20.0"
gloo = { version = "0.12.0", features = ["futures"] }
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.76"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", default-features = false, features = ["alloc"] }
anyhow = "1.0.103"
csv = "1.4.0"
calamine = "0.36.0"

chrono = { version = "0.4.45" }
rusty-money = { version = "0.5.0" }
rust_decimal = "1.42.1"
regex = "1.13.0"
uuid = { version = "1.23.4" }
js-sys = "0.3.85"

[workspace.dependencies.web-sys]
version = "0.3.85"
features = [
    "Window",
    "Document",
    "Url",
    "Element",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlSelectElement",
    "HtmlButtonElement",
    "HtmlTextAreaElement",
    "HtmlAnchorElement",
    "Event",
    "FocusEvent",
    "Node",
    "NodeList",
    "DomStringMap",
    "DomTokenList",
    "CssStyleDeclaration",
    "Navigator",
    "Geolocation",
    "PositionOptions"
]

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
