[package]
name = "admin_pages"
version = "0.1.0"
edition = "2024"

[dependencies]
js = { path = "../js" }
data_model = { path = "../data_model" }

log= { workspace = true }
yew= { workspace = true }
gloo= { workspace = true }
wasm-bindgen= { workspace = true }
wasm-bindgen-futures= { workspace = true }
web-sys = { workspace = true }
serde  = { workspace = true }
serde_json  = { workspace = true }

js-sys = "0"
rust_decimal = "1"
chrono = { version = "0", features = ["wasmbind"] }
csv = "1"
# zip = "2.5"
# calamine = "0.26.1"
