[package]
name = "admin_pages"
version = "0.1.0"
edition = "2024"

[dependencies]
js = { path = "../js" }
data_model = { path = "../data_model" }

tracing = { workspace = true }
yew = { workspace = true }
gloo = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

js-sys = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true, features = ["wasmbind"] }
csv = { workspace = true }
calamine = { workspace = true }
