[package]
name = "data_model"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0"
js = { path = "../js" }
once_cell = "1"
chrono = { version = "0", features = ["wasmbind"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
gloo = { version = "0", features = ["futures"] }
yew = { version = "0", features = ["csr"] }
yew-router = "0"
rusty-money = { version = "0", features = ["iso"] }
rust_decimal = "1"
regex = "1"
uuid = { version = "1", features = ["serde", "v4", "js"] }

# Needed by the HTML data readers
wasm-bindgen = "0"
js-sys = "0"

[dependencies.web-sys]
version = "0"
features = [
  "Document",
  "Element",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
]

# serde-wasm-bindgen = "0"
# wasm-bindgen-futures = "0"
# wasm-logger = "0"
# csv = "1"
# 
