[package]
name = "data_model"
version = "0.1.0"
edition = "2024"

[dependencies]
js = { path = "../js" }

tracing = { workspace = true }
yew = { workspace = true }
yew-router = { workspace = true }
gloo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

chrono = { workspace=true, features = ["wasmbind"] }
rusty-money = { workspace = true, features = ["iso"] }
rust_decimal = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "js"] }

# Needed by the HTML data readers
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
