[package]
name = "js"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
wasm-bindgen = "0"
serde-wasm-bindgen = "0"
wasm-bindgen-futures = "0"
gloo = { version = "0", features = ["futures"] }
js-sys = "0"

[dependencies.web-sys]
version = "0"
features = [
  "Element",
  "Node",
]

