[package]
name = "js"
version = "0.1.0"
edition = "2021"

[dependencies]
log= { workspace = true }
gloo= { workspace = true }
wasm-bindgen= { workspace = true }
wasm-bindgen-futures= { workspace = true }
web-sys = { workspace = true }
serde  = { workspace = true }
serde_json  = { workspace = true }

once_cell = "1"
serde-wasm-bindgen = "0"
js-sys = "0"

