[package]
name = "js"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
gloo = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

serde-wasm-bindgen = "0"
js-sys = "0"
