[package]
name = "order_pages"
version = "0.1.0"
edition = "2024"

[dependencies]
js = { path = "../js" }
data_model = { path = "../data_model" }

tracing = { workspace = true }
yew = { workspace = true }
yew-router = { workspace = true }
gloo = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

rust_decimal = "1"
rusty-money = { version = "0", features = ["iso"] }

