[package]
name = "report_pages"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0"
js = { path = "../js" }
data_model = { path = "../data_model" }
yew = { version = "0", features = ["csr"] }
yew-router = "0"
gloo = { version = "0", features = ["futures"] }
wasm-bindgen = "0"
wasm-bindgen-futures = "0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

# once_cell = "1"
# chrono = { version = "0", features = ["wasmbind"] }
# serde-wasm-bindgen = "0"
# js-sys = "0"
# wasm-logger = "0"
# rust_decimal = "1"
# rusty-money = { version = "0", features = ["iso"] }
# uuid = { version = "1", features = ["serde", "v4", "js"] }
# regex = "1"
# csv = "1"

[dependencies.web-sys]
version = "0"
features = [
  "Window",
  "Document",
  "Url",
  "Element",
  "HtmlElement",
  "HtmlFormElement",
  "HtmlSelectElement",
  "HtmlButtonElement",
  "HtmlTextAreaElement",
  "HtmlAnchorElement",
  "Event",
  "FocusEvent",
  "Node",
  "NodeList",
  "DomStringMap",
  "DomTokenList",
  "CssStyleDeclaration",
  "Navigator",
  "Geolocation",
  "PositionOptions"
]

