[package]
name = "report_pages"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0"
js = { path = "../js" }
data_model = { path = "../data_model" }
yew = { version = "0", features = ["csr"] }
yew-router = "0"
gloo = { version = "0", features = ["futures"] }
wasm-bindgen = "0"
wasm-bindgen-futures = "0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
web-sys = { workspace = true }

