[package]
name = "report_pages"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
yew = { workspace = true }
yew-router = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
web-sys = { workspace = true }
gloo = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

js = { path = "../js" }
data_model = { path = "../data_model" }
