[package]
name = "timecard_pages"
version = "0.1.0"
edition = "2024"

[lib]
# cdylib: built standalone as a dynamically loaded wasm module (see build_modules.sh)
# rlib: keeps `cargo build`/`cargo check` of the workspace working
crate-type = ["cdylib", "rlib"]

[dependencies]
js = { path = "../js" }
data_model = { path = "../data_model" }

tracing = { workspace = true }
yew = { workspace = true }
gloo = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
